<resources>
    <string name="app_name">MyQuizGame</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="question">What country does this flag belong to?</string>
    <string name="submit">SUBMIT</string>
    <string name="congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
</resources>